--- a/36bb36.yaml
+++ b/36bb36.yaml
@@ -61,6 +61,9 @@ endpoints:
   #   retrievalModels: ["gpt-4-turbo-preview"]
   #   # (optional) Assistant Capabilities available to all users. Omit the ones you wish to exclude. Defaults to list below.
   #   capabilities: ["code_interpreter", "retrieval", "actions", "tools", "image_vision"]
+  agents:  # Enables MCP/tools in chat UI
+    # Optional: pollIntervalMs: 750
+    timeoutMs: 180000
   custom:
     # OpenRouter Example
     - name: 'OpenRouter'
